# notestack

./: .gitignore  README.md  notestack-prd.md
backend/: conftest.py  local_server.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/contexts/attachment/application/: create_attachment.py  delete_attachment.py  get_download_url.py  list_attachments.py
backend/contexts/attachment/domain/: attachment_entity.py  attachment_repository.py
backend/contexts/attachment/infrastructure/: dynamo_attachment_repository.py  s3_attachment_service.py
backend/contexts/attachment/interfaces/: handlers.py
backend/contexts/feed/application/: get_feed.py  get_public_note.py  get_user_notes.py
backend/contexts/feed/domain/: feed_repository.py
backend/contexts/feed/infrastructure/: dynamo_feed_repository.py
backend/contexts/feed/interfaces/: handlers.py
backend/contexts/groups/application/: actions.py
backend/contexts/groups/domain/: entities.py
backend/contexts/groups/infrastructure/: dynamo_groups_repository.py
backend/contexts/groups/interfaces/: handlers.py
backend/contexts/note/application/: create_note.py  delete_note.py  get_note.py  get_notes.py  update_note.py
backend/contexts/note/domain/: note_entity.py  note_repository.py
backend/infra/: app.py  cdk.json
backend/infra/stacks/: notestack_stack.py
backend/tests/integration/: test_dynamo_attachment_repo.py  test_dynamo_note_repo.py
backend/tests/unit/: test_attachment_usecases.py  test_note_entity.py  test_note_usecases.py  test_upload_policy.py
frontend/: package-lock.json  (+1 more)
(+78 files in other folders)
